--- a/template/index.html
+++ b/template/index.html
@@ -89,6 +89,7 @@
                     <li> <a href="dashboard-02.html"> Ecommerce</a></li>
                   </ul>
                 </li>
+                
                 <li class="onhover-dropdown"><span class="f-w-600">Application</span><span><i class="middle" data-feather="chevron-down"></i></span>
                   <ul class="onhover-show-div left-dropdown">
                     <li class="flyout-right"><a href="javascript:void(0)">Project</a>
@@ -337,6 +338,7 @@
                           <li><a class="lan-5" href="dashboard-02.html">Ecommerce</a></li>
                         </ul>
                       </li>
+                      <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="questionnare.html"><i data-feather="help-circle"></i><span class="lan-111">Questionnare</span></a></li>
                       <li class="sidebar-list"><a class="sidebar-link sidebar-title" href="javascript:void(0)"><i data-feather="airplay"></i><span class="lan-6">Widgets</span></a>
                         <ul class="sidebar-submenu">
                           <li><a href="general-widget.html">General</a></li>
