--- a/template/questionnare.html
+++ b/template/questionnare.html
@@ -80,9 +80,11 @@
                                     <img src="../assets/images/GenAi-logo.webp">
                                     <span class="Gen"><h2>GenAI</h2></span>
                                   </div>
-                                  <h4 class="multisteps-form__title  mb-0">Your User Info?</h4>
+                                  
                                   <div class="multisteps-form__content">
-                                    <div class="form-row mt-2">
+                                                                        <div class="form-row mt-2 custom-scroll">
+                                                                          <h4 class="multisteps-form__title  mb-0">Your User Info?GENAI is the AI Content Generator that puts an expert  by your side to create amazing, original letters 10x faster.GENAI is the AI Content Generator that puts an expert  by your side to create amazing, original letters 10x faster.GENAI is the AI Content Generator that puts an expert  by your side to create amazing, original letters 10x faster.GENAI is the AI Content Generator that puts an expert  by your side to create amazing, original letters 10x faster.GENAI is the AI Content Generator that puts an expert  by your side to create amazing, original letters 10x faster.GENAI is the AI Content Generator that puts an expert  by your side to create amazing, original letters 10x faster.GENAI is the AI Content Generator that puts an expert  by your side to create amazing, original letters 10x faster.</h4>
+
                                       <div class="col-12 col-sm-12">
                                         <!-- <input class="multisteps-form__input form-control" type="text" placeholder="First Name"/> -->
                                         <textarea class="form-control multisteps-form__input form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
@@ -102,9 +104,10 @@
                                 <img src="../assets/images/GenAi-logo.webp">
                                 <span class="Gen"><h2>GenAI</h2></span>
                               </div>
-                                <h4 class="multisteps-form__title mb-0">Your User Info?</h4>
+                                
                               <div class="multisteps-form__content">
-                                <div class="form-row mt-2">
+                                <div class="form-row mt-2 custom-scroll">
+                                  <h4 class="multisteps-form__title mb-0">Your User Info?</h4>
                                     <div class="col-12 col-sm-12">
                                       <!-- <input class="multisteps-form__input form-control" type="text" placeholder="First Name"/> -->
                                       <textarea class="form-control multisteps-form__input form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
@@ -123,9 +126,10 @@
                                 <img src="../assets/images/GenAi-logo.webp">
                                 <span class="Gen"><h2>GenAI</h2></span>
                               </div>
-                              <h4 class="multisteps-form__title  mb-0">Your User Info?</h4>
+                              
                               <div class="multisteps-form__content">
-                                <div class="form-row mt-2">
+                                <div class="form-row mt-2 custom-scroll">
+                                  <h4 class="multisteps-form__title  mb-0">Your User Info?</h4>
                                     <div class="col-12 col-sm-12">
                                       <!-- <input class="multisteps-form__input form-control" type="text" placeholder="First Name"/> -->
                                       <textarea class="form-control multisteps-form__input form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
@@ -144,9 +148,10 @@
                                 <img src="../assets/images/GenAi-logo.webp">
                                 <span class="Gen"><h2>GenAI</h2></span>
                               </div>
-                                <h4 class="multisteps-form__title  mb-0">Your User Info?</h4>
+                                
                                 <div class="multisteps-form__content">
-                                  <div class="form-row mt-2">
+                                  <div class="form-row mt-2 custom-scroll">
+                                    
                                       <div class="col-12 col-sm-12">
                                         <!-- <input class="multisteps-form__input form-control" type="text" placeholder="First Name"/> -->
                                         <textarea class="form-control multisteps-form__input form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
