--- a/template/questionnare.html
+++ b/template/questionnare.html
@@ -160,8 +160,10 @@
                                     </div>
                                   <div class="button-row d-flex mt-4 justify-content-end">
                                     <button class="btn btn-blck js-btn-prev " type="button" title="Prev"><i class="arrow-left" data-feather="arrow-left"></i>Prev</button>
-                                    <button class="btn btn-success ml-auto" type="button" title="Send">Submit<i class="submit-icon" data-feather="send"></i></button>
+                                    <button class="btn btn-success ml-auto " type="button" title="Send">Submit<i class="submit-icon" data-feather="send"></i></button>
+                                    <a href="preview.html" target="_blank" class="btn btn-primary btn-sm ml-2" >Preview</a>
                                   </div>
+                                  
                                 </div>
                             </div>
                           </form>
@@ -177,7 +179,7 @@
         <div class="col-3 p-0 side-bar">
             <div class="card mb-0 br-rad">
                 <div class="card-header bg-pale br-rad border-bt">
-                  <h4>Flush Style</h4>
+                  <h4>Did you mean?</h4>
                 </div>
                 <div class="card-body pb-25 custom-scrollbar">
                   <ul class="list-group list-group-flush answer-list">
