--- a/template/user-dashboard.html
+++ b/template/user-dashboard.html
@@ -33,7 +33,7 @@
   <!-- Bootstrap css-->
   <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
   <!-- App css-->
-  <link rel="stylesheet" type="text/css" href="../assets/css/admin-dashboard.css">
+  <link rel="stylesheet" type="text/css" href="../assets/css/user-dashboard.css">
   <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
   <!-- Responsive css-->
   <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
@@ -106,7 +106,7 @@
             <div class="back-btn"><i data-feather="grid"></i></div>
             <div class="toggle-sidebar icon-box-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
           </div>
-          <div class="logo-icon-wrapper"><a href="index.html">
+          <div class="logo-icon-wrapper"><a href="user-dashboard.html">
             <div class="icon-box-sidebar"><i data-feather="grid"></i></div></a></div>
             <nav class="sidebar-main">
               <div class="left-arrow" id="left-arrow"><i data-feather="arrow-left"></i></div>
@@ -118,30 +118,27 @@
                   <li class="menu-box"> 
                     <ul>
                       <li class="sidebar-list">
-                        <a class="sidebar-link sidebar-title active" href="admin-dashboard.html">
+                        <a class="sidebar-link sidebar-title active" href="user-dashboard.html">
                           <i data-feather="home"></i><span class="">Dashboard</span>
                         </a>
                       </li>
-                      <!-- <li class="sidebar-list">
+                      <li class="sidebar-list">
                         <a class="sidebar-link sidebar-title active" href="questionnare.html">
                           <i data-feather="help-circle"></i><span class="">questionnare</span>
                         </a>
-                      </li> -->
+                      </li>
                       <li class="sidebar-list">
-                        <a class="sidebar-link sidebar-title" href="user-management.html">
-                          <i data-feather="users"></i><span class="">User Management</span>
+                        <a class="sidebar-link sidebar-title" href="Templates.html">
+                          <i data-feather="hash"></i><span class="">Templates</span>
                         </a>
                       </li>
                       <li class="sidebar-list">
-                        <a class="sidebar-link sidebar-title" href="subscription-management.html">
-                          <i data-feather="server"></i><span class="">Subscription Management</span>
+                        <a class="sidebar-link sidebar-title" href="temp-pricing.html">
+                          <i data-feather="dollar-sign"></i><span class="">Pricing</span>
                         </a>
                       </li>
-                      <li class="sidebar-list">
-                        <a class="sidebar-link sidebar-title" href="custom-template-management.html">
-                          <i data-feather="hash"></i><span class="">manage Custom Template </span>
-                        </a>
-                      </li>
+
+                 
                     </ul>
                   </div>
                   <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div>
@@ -160,7 +157,7 @@
                       <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a href="index.html"><i data-feather="home"></i></a></li>
                         <li class="breadcrumb-item">Dashboard</li>
-                        <li class="breadcrumb-item active">Admin</li>
+                        <li class="breadcrumb-item active">Babar</li>
                       </ol>
                     </div>
                   </div>
@@ -196,7 +193,7 @@
                               <li> <img src="../assets/images/dashboard/default/ribbon7.png" alt=""></li>
                             </ul>
                           </div>
-                          <h4><a href="user-profile.html"><span>Welcome Back</span> John  </a><span class="right-circle"><i class="fa fa-check-circle font-primary f-14 middle"></i></span></h4>
+                          <h4><a href="user-profile.html"><span>Welcome Back</span> Babar  </a><span class="right-circle"><i class="fa fa-check-circle font-primary f-14 middle"></i></span></h4>
                           
                         </div>
                       </div>
@@ -204,75 +201,84 @@
                   </div>
                   <div class="col-xxl-6 col-xl-6 col-lg-6 dash-45 box-col-40">
                     <div class="row">
-                      <div class="col-xl-6 col-lg-6 col-md-6 box-col-30">
+                      <div class="col-xl-12 col-lg-12 col-md-6 box-col-30">
                         
-                        <div class="card total-investment">
+                        <div class="card total-investment min-hi">
                           <div class="card-header pb-0">
                             <div class="d-flex justify-content-between">
                               <div class="flex-grow-1"> 
-                                <p class=" f-w-600 ">Total Users<i class="fa fa-circle"> </i></p>
+                                <p class=" f-w-600 ">Buy Subscription<i class="fa fa-circle"> </i></p>
                                 
                               </div>
                               
                             </div>
                           </div>
                           <div class="card-body pt-1">
-                            <h3>40K</h3>
+                            <h5><a href="temp-pricing.html">Want to go Pro?</a></h5>
                           </div>
                         </div>
                       </div>
-                      <div class="col-xl-6 col-lg-6 col-md-6 box-col-30">
+                      <div class="col-xl-12 col-lg-12 col-md-6 box-col-30">
                         
-                        <div class="card total-investment">
+                        <div class="card total-investment min-hi">
                           <div class="card-header pb-0">
                             <div class="d-flex justify-content-between">
                               <div class="flex-grow-1"> 
-                                <p class=" f-w-600 ">Total Generated Templates<i class="fa fa-circle"> </i></p>
+                                <p class=" f-w-600 ">Your current Subscripition<i class="fa fa-circle"> </i></p>
                                 
                               </div>
                               
                             </div>
                           </div>
                           <div class="card-body pt-1">
-                            <h3>40K</h3>  
+                            <h5 class="d-flex justify-content-between">
+                              <a href="">Usage</a>
+                              <span>25%</span>
+                            </h5>
+                            <div class="progress" style="height: 5px;">
+                              <div class="progress-bar" id="progressBar" role="progressbar" style="width: 25%; background-color: #5c61f2 " aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div> 
                             
                           </div>
                         </div>
                       </div>   
-                      <div class="col-xl-12 col-lg-12 col-md-12 box-col-30">
+                      <!-- <div class="col-xl-12 col-lg-12 col-md-12 box-col-30">
                         
                         <div class="card total-investment">
                           <div class="card-header pb-0">
                             <div class="d-flex justify-content-between">
                               <div class="flex-grow-1"> 
-                                <p class=" f-w-600 ">Subscripition Wise Users<i class="fa fa-circle"> </i></p>
+                                <p class=" f-w-600 ">Subscripition Wise Usages<i class="fa fa-circle"> </i></p>
                                 
                               </div>
                               
                             </div>
                           </div>
                           <div class="card-body pt-1 pb-1">
-                            <h3 class="d-flex align-items-center">Total&nbsp;<i class="fa fa-arrow-right circle-wid"></i>&nbsp; <span>40K</span></h3>
+                            <h3 class="d-flex align-items-center">Total&nbsp;<i class="fa fa-arrow-right circle-wid"></i>&nbsp; <span>2</span></h3>
                             
                           </div>
                           <div class="card-footer">
                             <div class="row">
                               <div class="col text-center ">
                                 <h6>Basic</h6>
-                                <h5 class="counter mb-0 font-primary mt-1">6589</h5>
+                                <h5><a href="">Usage</a></h5>
+                                <div class="progress" style="height: 5px;">
+                                  <div class="progress-bar" id="progressBar" role="progressbar" style="width: 50%; background-color: #5c61f2 " aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div> 
                               </div>
-                              <div class="col text-center border-lef">
-                                <h6>Advance</h6>
-                                <h5 class="counter mb-0 font-primary mt-1">6589</h5>
-                              </div>
+
                               <div class="col text-center border-lef">
                                 <h6>Premium</h6>
-                                <h5 class="counter mb-0 font-primary mt-1">6589</h5>
+                                <h5><a href="">Usage</a></h5>
+                            <div class="progress" style="height: 5px;">
+                              <div class="progress-bar" id="progressBar" role="progressbar" style="width: 25%; background-color: #5c61f2 " aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div> 
                               </div>
                             </div>
                           </div>
                         </div>
-                      </div>   
+                      </div>    -->
                     </div>
                   </div>
                   
