--- a/template/User/card-details.html
+++ b/template/User/card-details.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   
-<!-- Mirrored from admin.pixelstrap.com/tivo/template/pricing.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 21 Jan 2023 09:37:13 GMT -->
+<!-- Mirrored from admin.pixelstrap.com/tivo/template/payment-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 21 Jan 2023 09:37:06 GMT -->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,29 +9,30 @@
     <meta name="description" content="tivo admin is super flexible, powerful, clean &amp; modern responsive bootstrap 5 admin template with unlimited possibilities.">
     <meta name="keywords" content="admin template, Tivo admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="pixelstrap">
-    <link rel="icon" href="../assets/images/favicon/favicon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/favicon/favicon.png" type="image/x-icon">
-    <title>GenAI - template-pricing</title><link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="icon" href="../../assets/images/favicon/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/favicon/favicon.png" type="image/x-icon">
+    <title>GenAI - card-details</title><link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/font-awesome.css">
     <!-- ico-font-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/icofont.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/icofont.css">
     <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/themify.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/themify.css">
     <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/flag-icon.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/flag-icon.css">
     <!-- Feather icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/feather-icon.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/feather-icon.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/scrollbar.css">
     <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/bootstrap.css">
     <!-- App css-->
-  <link rel="stylesheet" type="text/css" href="../assets/css/user-dashboard.css">
-  <!-- <link rel="stylesheet" type="text/css" href="../assets/css/style.css"> -->
-    <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
+    <!-- <link rel="stylesheet" type="text/css" href="../../assets/css/style.css"> -->
+    <link rel="stylesheet" type="text/css" href="../../assets/css/user/user-dashboard.css">
+
+    <link id="color" rel="stylesheet" href="../../assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/responsive.css">
   </head>
   <body>
     <!-- tap on top starts-->
@@ -49,7 +50,8 @@
     <!-- page-wrapper Start-->
     <div class="page-wrapper compact-wrapper" id="pageWrapper">
       <!-- Page Header Start-->
-      <div class="page-header">
+      
+          <div class="page-header">
         <div class="header-wrapper row m-0">
           <form class="form-inline search-full col" action="#" method="get">
             <div class="form-group w-100">
@@ -64,7 +66,7 @@
           </form>
           <div class="header-logo-wrapper col-auto p-0">
             <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
-            <div class="logo-header-main"><a href="user-dashboard.html"><img class="img-fluid for-light img-100" src="../assets/images/logo/logo2.png" alt=""><img class="img-fluid for-dark" src="../assets/images/logo/logo.png" alt=""></a></div>
+            <div class="logo-header-main"><a href="user-dashboard.html"><img class="img-fluid for-light img-100" src="../../assets/images/logo/logo2.png" alt=""><img class="img-fluid for-dark" src="../assets/images/logo/logo.png" alt=""></a></div>
           </div>
           <div class="nav-right col pull-right right-header p-0">
             <ul class="nav-menus">
@@ -95,9 +97,10 @@
       <!-- Page Body Start-->
       <div class="page-body-wrapper">
         <!-- Page Sidebar Start-->
-        <div class="sidebar-wrapper">
+        
+          <div class="sidebar-wrapper">
           <div>
-            <div class="logo-wrapper"><a class="d-flex  align-items-center logo-hover" href="admin-dashboard.html"><img class="logo-gen" src="../assets/images/GenAi-logo.png">
+            <div class="logo-wrapper"><a class="d-flex  align-items-center logo-hover" href="admin-dashboard.html"><img class="logo-gen" src="../../assets/images/GenAi-logo.png">
               <span class="GenAi"><h2>GenAI</h2></span></a>
               <div class="back-btn"><i data-feather="grid"></i></div>
               <div class="toggle-sidebar icon-box-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
@@ -146,152 +149,92 @@
           <div class="container-fluid">
             <div class="page-title">
               <div class="row">
-                <div class="col-sm-6">
-                  <h3>Pricing</h3>
+                <div class="col-sm-6 ">
+                  <h3>Payment Details</h3>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 ">
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="user-dashboard.html">                                       <i data-feather="home"></i></a></li>
-                    <!-- <li class="breadcrumb-item">Ecommerce</li> -->
-                    <li class="breadcrumb-item active">Pricing</li>
+                    <li class="breadcrumb-item"><a href="index.html">                                       <i data-feather="home"></i></a></li>
+                    <li class="breadcrumb-item">Checkout</li>
+                    <li class="breadcrumb-item active">Payment Details</li>
                   </ol>
                 </div>
               </div>
             </div>
           </div>
           <!-- Container-fluid starts-->
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-sm-12">
+          <div class="container-fluid credit-card payment-details">
+            <div class="row justify-content-center">
+              <!-- Individual column searching (text inputs) Starts-->
+              <div class="col-xl-12 box-col-80">
                 <div class="card">
-                  <div class="card-header pb-0"> 
-                    <h4>Pricing</h4>
+                  <div class="card-header pb-0">
+                    <h4>Credit card </h4>
                   </div>
-                  <div class="card-body pricing-content">
-                    <div class="row pricing-col">
-                      <div class="col-lg-4 col-sm-6 box-col-3">
-                        <div class="pricing-block card text-center">
-                          <div class="pricing-header">
-                            <h2>Free to use</h2>
-                            <p> Pay £4 once for a fully completed complaint/appeal letter</p>
-                            <div class="price-box">
-                              <div>
-                                <h3>£4</h3>
-                                <p class="mb-0">/ month</p>
-                              </div>
-                            </div>
+                  <div class="card-body">
+                    <div class="row">
+                      <div class="col-md-7">
+                        <form class="theme-form mega-form">
+                          <div class="mb-3">
+                            <input class="form-control" type="text" placeholder="Card number">
                           </div>
-                          <div class="pricing-list">                                     
-                            <ul class="pricing-inner">
-                              <li>
-                                <h6><span> No Refresh Option</span></h6>
-                              </li>
-                              <li>
-                                <h6><span> User will be able to download the copy at the end of the process.</span></h6>
-                              </li>
-                              
-                            </ul>
-                            <a href="plan-user-detail.html" class="btn btn-blck btn-lg" type="button"  title="">Subscribe</a>
+                          <div class="mb-3">
+                            <input class="form-control" type="text" placeholder="First Name">
                           </div>
-                        </div>
+                          <div class="mb-3">
+                            <input class="form-control" type="date">
+                          </div>
+                          <div class="mb-3">
+                            <input class="form-control" type="text" placeholder="Name on card">
+                          </div>
+                          <div>
+                            <select class="form-select" size="1">
+                              <option>Select Type</option>
+                              <option>Master</option>
+                              <option>Visa</option>
+                            </select>
+                          </div>
+                        </form>
                       </div>
-                      <div class="col-lg-4 col-sm-6 box-col-3">
-                        <div class="pricing-block card text-center">
-                          <div class="pricing-header">
-                            <h2>Basic </h2>
-                            <p> Subscribe for £6/month for 10 letters a month</p>
-                            <div class="price-box">
-                              <div>
-                                <h3>£6</h3>
-                                <p class="mb-0">/ month</p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="pricing-list">                                     
-                            <ul class="pricing-inner">
-                              <li>
-                                <h6><span> 3 Refresh Option</span></h6>
-                              </li>
-                              <li>
-                                <h6><span> User will be able to generate 10 forms.</span></h6>
-                              </li>
-                              
-                            </ul>
-                            <a href="plan-user-detail.html" class="btn btn-blck btn-lg" type="button"  title="">Subscribe</a>
-                          </div>
-                        </div>
+                      <div class="col-md-5 text-center card-order">
+                        <img class="img-fluid" src="../../assets/images/ecommerce/card.png" alt="">
+                        <button class="btn btn-blck sweet-8 mt-3 w-100" type="button" onclick="_gaq.push(['_trackEvent', 'example', 'try', 'sweet-8']);">Submit</button>
                       </div>
-                      <div class="col-lg-4 col-sm-6 box-col-3">
-                        <div class="pricing-block card text-center">
-                          <div class="pricing-header">
-                            <h2>Pro  </h2>
-                            <p> Subscribe for £8/month for unlimited usage.</p>
-                            <div class="price-box">
-                              <div>
-                                <h3>£8</h3>
-                                <p class="mb-0">/ month</p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="pricing-list">
-                            <ul class="pricing-inner">
-                              <li>
-                                <h6><span> 9 Refresh Option</span></h6>
-                              </li>
-                              <li>
-                                <h6><span> User will be able to generate unlimited forms.</span></h6>
-                              </li>
-                             
-                            </ul>
-                            <a href="plan-user-detail.html" class="btn btn-blck btn-lg" type="button"  title="">Subscribe</a>
-                          </div>
-                        </div>
-                      </div>
-                     
                     </div>
                   </div>
                 </div>
               </div>
-             
+              <!-- Individual column searching (text inputs) Ends-->
+
             </div>
           </div>
+          <!-- Container-fluid Ends-->
         </div>
         <!-- footer start-->
-        <footer class="footer">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-md-6 p-0 footer-left">
-                <p class="mb-0">Copyright © 2023 Tivo. All rights reserved.</p>
-              </div>
-              <div class="col-md-6 p-0 footer-right">
-                <p class="mb-0">Hand-crafted & made with <i class="fa fa-heart font-danger"></i></p>
-              </div>
-            </div>
-          </div>
-        </footer>
+     
       </div>
     </div>
     <!-- latest jquery-->
-    <script src="../assets/js/jquery-3.6.0.min.js"></script>
+    <script src="../../assets/js/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap js-->
-    <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
     <!-- feather icon js-->
-    <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
-    <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
+    <script src="../../assets/js/icons/feather-icon/feather.min.js"></script>
+    <script src="../../assets/js/icons/feather-icon/feather-icon.js"></script>
     <!-- scrollbar js-->
-    <script src="../assets/js/scrollbar/simplebar.js"></script>
-    <script src="../assets/js/scrollbar/custom.js"></script>
+    <script src="../../assets/js/scrollbar/simplebar.js"></script>
+    <script src="../../assets/js/scrollbar/custom.js"></script>
     <!-- Sidebar jquery-->
-    <script src="../assets/js/config.js"></script>
-    <script src="../assets/js/sidebar-menu.js"></script>
-    <script src="../assets/js/counter/jquery.waypoints.min.js"></script>
-    <script src="../assets/js/counter/jquery.counterup.min.js"></script>
-    <script src="../assets/js/counter/counter-custom.js"></script>
+    <script src="../../assets/js/config.js"></script>
+    <script src="../../assets/js/sidebar-menu.js"></script>
+    <script src="../../assets/js/sweet-alert/sweetalert.min.js"></script>
+    <script src="../../assets/js/sweet-alert/app.js"></script>
+
     <!-- Template js-->
-    <script src="../assets/js/script.js"></script>
+    <script src="../../assets/js/script.js"></script>
     <!-- <script src="../assets/js/theme-customizer/customizer.js">  </script> -->
     <!-- login js-->
   </body>
 
-<!-- Mirrored from admin.pixelstrap.com/tivo/template/pricing.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 21 Jan 2023 09:37:13 GMT -->
+<!-- Mirrored from admin.pixelstrap.com/tivo/template/payment-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 21 Jan 2023 09:37:07 GMT -->
 </html>
