--- a/template/User/Templates.html
+++ b/template/User/Templates.html
@@ -10,36 +10,36 @@
     <meta name="description" content="tivo admin is super flexible, powerful, clean &amp; modern responsive bootstrap 5 admin template with unlimited possibilities.">
     <meta name="keywords" content="admin template, Tivo admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="pixelstrap">
-    <link rel="icon" href="../assets/images/favicon/favicon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/favicon/favicon.png" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/favicon/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/favicon/favicon.png" type="image/x-icon">
     <title>GenAI - Templates</title><link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <!-- ico-font-->
     <link rel="stylesheet" type="text/css" href="../assets/css/vendors/icofont.css">
     <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/themify.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/themify.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/themify-icons@1.0.0/index.min.js">
     <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/flag-icon.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/flag-icon.css">
     <!-- Feather icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/feather-icon.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/animate.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/chartist.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/prism.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/vector-map.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/feather-icon.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/animate.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/chartist.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/prism.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/vector-map.css">
     <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/datatables.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/datatables.css">
     
     <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/admin-dashboard.css">
-    <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/admin/admin-dashboard.css">
+    <link id="color" rel="stylesheet" href="../../assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/responsive.css">
 </head>
 <body onload="startTime()">
     <!-- tap on top starts-->
@@ -72,7 +72,7 @@
               </form>
               <div class="header-logo-wrapper col-auto p-0">
                 <div class="toggle-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
-                <div class="logo-header-main"><a href="index.html"><img class="img-fluid for-light img-100" src="../assets/images/logo/logo2.png" alt=""><img class="img-fluid for-dark" src="../assets/images/logo/logo.png" alt=""></a></div>
+                <div class="logo-header-main"><a href="index.html"><img class="img-fluid for-light img-100" src="../../assets/images/logo/logo2.png" alt=""><img class="img-fluid for-dark" src="../assets/images/logo/logo.png" alt=""></a></div>
               </div>
               <div class="nav-right col pull-right right-header p-0">
                 <ul class="nav-menus">
@@ -105,7 +105,7 @@
             <!-- Page Sidebar Start-->
             <div class="sidebar-wrapper">
                 <div>
-                  <div class="logo-wrapper"><a class="d-flex  align-items-center logo-hover" href="admin-dashboard.html"><img class="logo-gen" src="../assets/images/GenAi-logo.png">
+                  <div class="logo-wrapper"><a class="d-flex  align-items-center logo-hover" href="admin-dashboard.html"><img class="logo-gen" src="../../assets/images/GenAi-logo.png">
                     <span class="GenAi"><h2>GenAI</h2></span></a>
                     <div class="toggle-sidebar icon-box-sidebar"><i class="status_toggle middle sidebar-toggle" data-feather="grid"> </i></div>
                   </div>
@@ -241,50 +241,50 @@
             </div>
           </div>
         <!-- latest jquery-->
-        <script src="../assets/js/jquery-3.6.0.min.js"></script>
+        <script src="../../assets/js/jquery-3.6.0.min.js"></script>
         <!-- Bootstrap js-->
-        <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="../../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
         <!-- feather icon js-->
-        <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
-        <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
+        <script src="../../assets/js/icons/feather-icon/feather.min.js"></script>
+        <script src="../../assets/js/icons/feather-icon/feather-icon.js"></script>
         <!-- scrollbar js-->
         
-        <script src="../assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
-        <script src="../assets/js/datatable/datatables/datatable.custom.js"></script>
+        <script src="../../assets/js/datatable/datatables/jquery.dataTables.min.js"></script>
+        <script src="../../assets/js/datatable/datatables/datatable.custom.js"></script>
         
-        <script src="../assets/js/scrollbar/simplebar.js"></script>
-        <script src="../assets/js/scrollbar/custom.js"></script>
-        <script src="../assets/js/counter/jquery.waypoints.min.js"></script>
-        <script src="../assets/js/counter/jquery.counterup.min.js"></script>
-        <script src="../assets/js/counter/counter-custom.js"></script>
+        <script src="../../assets/js/scrollbar/simplebar.js"></script>
+        <script src="../../assets/js/scrollbar/custom.js"></script>
+        <script src="../../assets/js/counter/jquery.waypoints.min.js"></script>
+        <script src="../../assets/js/counter/jquery.counterup.min.js"></script>
+        <script src="../../assets/js/counter/counter-custom.js"></script>
         <!-- Sidebar jquery-->
-        <script src="../assets/js/config.js"></script>
-        <script src="../assets/js/sidebar-menu.js"></script>
-        <script src="../assets/js/chart/chartist/chartist.js"></script>
-        <script src="../assets/js/chart/chartist/chartist-plugin-tooltip.js"></script>
-        <script src="../assets/js/chart/apex-chart/apex-chart.js"></script>
-        <script src="../assets/js/chart/apex-chart/stock-prices.js"></script>
-        <script src="../assets/js/prism/prism.min.js"></script>
-        <script src="../assets/js/clipboard/clipboard.min.js"></script>
-        <script src="../assets/js/custom-card/custom-card.js"></script>
-        <script src="../assets/js/notify/bootstrap-notify.min.js"></script>
-        <script src="../assets/js/vector-map/jquery-jvectormap-2.0.2.min.js"></script>
-        <script src="../assets/js/vector-map/map/jquery-jvectormap-world-mill-en.js"></script>
-        <script src="../assets/js/vector-map/map/jquery-jvectormap-us-aea-en.js"></script>
-        <script src="../assets/js/vector-map/map/jquery-jvectormap-uk-mill-en.js"></script>
-        <script src="../assets/js/vector-map/map/jquery-jvectormap-au-mill.js"></script>
-        <script src="../assets/js/vector-map/map/jquery-jvectormap-chicago-mill-en.js"></script>
-        <script src="../assets/js/vector-map/map/jquery-jvectormap-in-mill.js"></script>
-        <script src="../assets/js/vector-map/map/jquery-jvectormap-asia-mill.js"></script>
-        <script src="../assets/js/dashboard/default.js"></script>
-        <script src="../assets/js/notify/index.js"></script>
-        <script src="../assets/js/typeahead/handlebars.js"></script>
-        <script src="../assets/js/typeahead/typeahead.bundle.js"></script>
-        <script src="../assets/js/typeahead/typeahead.custom.js"></script>
-        <script src="../assets/js/typeahead-search/handlebars.js"></script>
-        <script src="../assets/js/typeahead-search/typeahead-custom.js"></script>
+        <script src="../../assets/js/config.js"></script>
+        <script src="../../assets/js/sidebar-menu.js"></script>
+        <script src="../../assets/js/chart/chartist/chartist.js"></script>
+        <script src="../../assets/js/chart/chartist/chartist-plugin-tooltip.js"></script>
+        <script src="../../assets/js/chart/apex-chart/apex-chart.js"></script>
+        <script src="../../assets/js/chart/apex-chart/stock-prices.js"></script>
+        <script src="../../assets/js/prism/prism.min.js"></script>
+        <script src="../../assets/js/clipboard/clipboard.min.js"></script>
+        <script src="../../assets/js/custom-card/custom-card.js"></script>
+        <script src="../../assets/js/notify/bootstrap-notify.min.js"></script>
+        <script src="../../assets/js/vector-map/jquery-jvectormap-2.0.2.min.js"></script>
+        <script src="../../assets/js/vector-map/map/jquery-jvectormap-world-mill-en.js"></script>
+        <script src="../../assets/js/vector-map/map/jquery-jvectormap-us-aea-en.js"></script>
+        <script src="../../assets/js/vector-map/map/jquery-jvectormap-uk-mill-en.js"></script>
+        <script src="../../assets/js/vector-map/map/jquery-jvectormap-au-mill.js"></script>
+        <script src="../../assets/js/vector-map/map/jquery-jvectormap-chicago-mill-en.js"></script>
+        <script src="../../assets/js/vector-map/map/jquery-jvectormap-in-mill.js"></script>
+        <script src="../../assets/js/vector-map/map/jquery-jvectormap-asia-mill.js"></script>
+        <script src="../../assets/js/dashboard/default.js"></script>
+        <script src="../../assets/js/notify/index.js"></script>
+        <script src="../../assets/js/typeahead/handlebars.js"></script>
+        <script src="../../assets/js/typeahead/typeahead.bundle.js"></script>
+        <script src="../../assets/js/typeahead/typeahead.custom.js"></script>
+        <script src="../../assets/js/typeahead-search/handlebars.js"></script>
+        <script src="../../assets/js/typeahead-search/typeahead-custom.js"></script>
         <!-- Template js-->
-        <script src="../assets/js/script.js"></script>
+        <script src="../../assets/js/script.js"></script>
         <!-- <script src="../assets/js/theme-customizer/customizer.js">  </script> -->
         <!-- login js-->
     </body>
