--- a/template/User/questionnare.html
+++ b/template/User/questionnare.html
@@ -9,35 +9,35 @@
     <meta name="description" content="tivo admin is super flexible, powerful, clean &amp; modern responsive bootstrap 5 admin template with unlimited possibilities.">
     <meta name="keywords" content="admin template, Tivo admin template, dashboard template, flat admin template, responsive admin template, web app">
     <meta name="author" content="pixelstrap">
-    <link rel="icon" href="../assets/images/favicon/favicon.png" type="image/x-icon">
-    <link rel="shortcut icon" href="../assets/images/favicon/favicon.png" type="image/x-icon">
+    <link rel="icon" href="../../assets/images/favicon/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/favicon/favicon.png" type="image/x-icon">
     <title>GenAI - questionnare</title><link rel="preconnect" href="https://fonts.googleapis.com/">
 <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/font-awesome.css">
     <!-- ico-font-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/icofont.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/icofont.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- Themify icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/themify.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/themify.css">
     <!-- google icon-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
     <!-- Flag icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/flag-icon.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/flag-icon.css">
     <!-- Feather icon-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/feather-icon.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/feather-icon.css">
     <!-- Bootstrap css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/vendors/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/vendors/bootstrap.css">
     <!-- App css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/style.css">
-    <link id="color" rel="stylesheet" href="../assets/css/color-1.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/style.css">
+    <link id="color" rel="stylesheet" href="../../assets/css/color-1.css" media="screen">
     <!-- Responsive css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/responsive.css">
     <!-- custom css-->
-    <link rel="stylesheet" type="text/css" href="../assets/css/custom.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/questionnare.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/custom.css">
+    <link rel="stylesheet" type="text/css" href="../../assets/css/user/questionnare.css">
   </head>
   <body>
     <!-- Loader starts-->
@@ -77,7 +77,7 @@
                             <div class="multisteps-form__panel shadow p-4  bg-white bg-pale js-active" data-animation="slideHorz">
                                 <div>
                                   <a href="user-dashboard.html" class="d-flex justify-content-center align-items-center ml-cus logo-hover">
-                                    <img src="../assets/images/GenAi-logo.png">
+                                    <img src="../../assets/images/GenAi-logo.png">
                                     <span class="Gen"><h2>GenAI</h2></span>
                                   </a>
                                   
@@ -101,7 +101,7 @@
                             <!--single form panel-->
                             <div class="multisteps-form__panel shadow p-4  bg-white bg-pale" data-animation="slideHorz">
                               <a href="user-dashboard.html" class="d-flex justify-content-center align-items-center ml-cus logo-hover">
-                                <img src="../assets/images/GenAi-logo.png">
+                                <img src="../../assets/images/GenAi-logo.png">
                                 <span class="Gen"><h2>GenAI</h2></span>
                               </a>
                                 
@@ -123,7 +123,7 @@
                             <!--single form panel-->
                             <div class="multisteps-form__panel shadow p-4  bg-white bg-pale" data-animation="slideHorz">
                               <a href="user-dashboard.html" class="d-flex justify-content-center align-items-center ml-cus logo-hover">
-                                <img src="../assets/images/GenAi-logo.png">
+                                <img src="../..assets/images/GenAi-logo.png">
                                 <span class="Gen"><h2>GenAI</h2></span>
                               </a>
                               
@@ -145,7 +145,7 @@
                             <!--single form panel-->
                             <div class="multisteps-form__panel shadow p-4  bg-white bg-pale" data-animation="slideHorz">
                               <a href="user-dashboard.html" class="d-flex justify-content-center align-items-center ml-cus logo-hover">
-                                <img src="../assets/images/GenAi-logo.png">
+                                <img src="../../assets/images/GenAi-logo.png">
                                 <span class="Gen"><h2>GenAI</h2></span>
                               </a>
                                 
@@ -153,15 +153,25 @@
                                   <div class="form-row mt-2 custom-scroll">
                                     
                                       <div class="col-12 col-sm-12">
-                                        <!-- <input class="multisteps-form__input form-control" type="text" placeholder="First Name"/> -->
-                                        <textarea class="form-control multisteps-form__input form-control" id="exampleFormControlTextarea1" rows="6"></textarea>
+                                        <p>
+                                          Write a detailed, compelling [complaint letter]
+                                          [I received a damaged product upon delivery.]
+                                          [I contacted customer service over the phone and was told nothing could be done.
+                                          [I am complaining to ABC Corporation, the manufacturer of the product.
+                                          [The issue first occurred on July 15th and I first brought it to the attention of customer service on July 16th.]
+                                          [It has caused significant stress and inconvenience in my daily routine.]
+                                          [I have an email chain between myself and the company discussing the issue.]
+                                          [Yes, I have a delivery that was supposed to arrive by tomorrow and it still hasn't been received.]
+                                          [I would like a full refund for the faulty product.]
+
+                                        </p>
                                       </div>
                                      
                                     </div>
                                   <div class="button-row d-flex mt-4 justify-content-end">
                                     <button class="btn btn-blck js-btn-prev last-form-btns" type="button" title="Prev"><i class="arrow-left" data-feather="arrow-left"></i>Prev</button>
-                                    <button class="btn btn-success ml-auto last-form-btns" type="button" title="Send">Submit<i class="submit-icon" data-feather="send"></i></button>
-                                    <a href="preview.html" target="_blank" class="btn btn-blck btn-sm ml-2 last-form-btns" >Preview</a>
+                                    <button class="btn btn-success ml-auto last-form-btns" type="button" title="Send">Add<i class="submit-icon" data-feather="send"></i></button>
+                                    
                                   </div>
                                   
                                 </div>
@@ -186,22 +196,36 @@
                     <li class="list-group-item ">
                       <h5>Answer 1</h5>
                       <p class="d-flex justify-content-between align-items-center">
-                        Cras justo odio<i class="bi bi-files"></i>
+                        Cras justo odio
+                        <span class="tooltipcus">
+                          <i class="bi bi-files "></i>
+                          <span class="tooltiptext">copy on clipboard</span>
+                        </span>
+                        
                       </p>
                     </li>
                       <li class="list-group-item">
                         <h5>Answer 2</h5>
                         <p class="d-flex justify-content-between align-items-center">
-                          Cras justo odio<i class="bi bi-files"></i></p></li><li class="list-group-item ">
+                          Cras justo odio<span class="tooltipcus">
+                            <i class="bi bi-files "></i>
+                            <span class="tooltiptext">copy on clipboard</span>
+                          </span></p></li><li class="list-group-item ">
                             <h5>Answer 3</h5>
                             <p class="d-flex justify-content-between align-items-center">
-                              Cras justo odio<i class="bi bi-files"></i>
+                              Cras justo odio<span class="tooltipcus">
+                                <i class="bi bi-files "></i>
+                                <span class="tooltiptext">copy on clipboard</span>
+                              </span>
                             </p>
                       </li>
                       <li class="list-group-item">
                         <h5>Answer 4</h5>
                         <p class="d-flex justify-content-between align-items-center">
-                          Cras justo odio<i class="bi bi-files"></i>
+                          Cras justo odio<span class="tooltipcus">
+                            <i class="bi bi-files "></i>
+                            <span class="tooltiptext">copy on clipboard</span>
+                          </span>
                         </p>
                       </li>
                     </ul>
@@ -211,20 +235,20 @@
         </div>
       </div>
       <!-- latest jquery-->
-      <script src="../assets/js/jquery-3.6.0.min.js"></script>
+      <script src="../../assets/js/jquery-3.6.0.min.js"></script>
       <!-- Bootstrap js-->
-      <script src="../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
+      <script src="../../assets/js/bootstrap/bootstrap.bundle.min.js"></script>
       <!-- feather icon js-->
-      <script src="../assets/js/icons/feather-icon/feather.min.js"></script>
-      <script src="../assets/js/icons/feather-icon/feather-icon.js"></script>
+      <script src="../../assets/js/icons/feather-icon/feather.min.js"></script>
+      <script src="../../assets/js/icons/feather-icon/feather-icon.js"></script>
       <!-- scrollbar js-->
       <!-- Sidebar jquery-->
-      <script src="../assets/js/config.js"></script>
+      <script src="../../assets/js/config.js"></script>
       <!-- Template js-->
-      <script src="../assets/js/script.js"></script>
+      <script src="../../assets/js/script.js"></script>
       <!-- questionnare js-->
-      <script src="../assets/js/questionnare.js"></script>
-    <script src="../assets/js/answer.js">  </script>
+      <script src="../../assets/js/questionnare.js"></script>
+    <script src="../../assets/js/answer.js">  </script>
 
       <!-- login js-->
     </div>
