some new chnages

--- a/template/User/questionnare.html
+++ b/template/User/questionnare.html
@@ -321,24 +321,24 @@
                 <div class="modal-body">
                     <div class="row">
                       <div class="col-lg-6">
-                          <label>Tag1</label>
-                          <input class=" form-control" type="text" placeholder="Name" readonly>
-                          <label>Tag2</label>
-                          <input class=" form-control" type="text" placeholder="Address" readonly>
-                          <label>Tag3</label>
-                          <input class=" form-control" type="text" placeholder="company" readonly>
-                          <label>Tag4</label>
-                          <input class=" form-control" type="text" placeholder="date" readonly>
+                          
+                          <input class=" form-control mb-2" type="text" placeholder="Name" readonly>
+                          
+                          <input class=" form-control mb-2" type="text" placeholder="Address" readonly>
+                          
+                          <input class=" form-control mb-2" type="text" placeholder="company" readonly>
+                          
+                          <input class=" form-control mb-2" type="text" placeholder="date" readonly>
                       </div>
                       <div class="col-lg-6">
-                          <label>Answer1</label>
-                          <input class=" form-control" type="text" placeholder="" required="">
-                          <label>Answer2</label>
-                          <input class=" form-control" type="text" placeholder="" required="">
-                          <label>Answer3</label>
-                          <input class=" form-control" type="text" placeholder="" required="">
-                          <label>Answer4</label>
-                          <input class=" form-control" type="text" placeholder="" required="">
+                          
+                          <input class=" form-control mb-2" type="text" placeholder="" required="">
+                          
+                          <input class=" form-control mb-2" type="text" placeholder="" required="">
+                          
+                          <input class=" form-control mb-2" type="text" placeholder="" required="">
+                          
+                          <input class=" form-control mb-2" type="text" placeholder="" required="">
                       </div>
                       <div class="row m-t-10">
                           <div class="col-lg-12">
