--- a/template/User/Templates.html
+++ b/template/User/Templates.html
@@ -173,7 +173,8 @@
                                             <tr>
                                                 <th>Actions</th>
                                                 <th>Templates</th>
-                                                <th>Progress</th>
+                                                <th>No of refreshes</th>
+                                                <th>no of forms</th>
                                                
                                                 
                                                 <th>Status</th>
@@ -189,25 +190,11 @@
                                                 <td><a href="#">complain</a></td>
                                                 
                                                 
-                                                <td><div class="progress" style="height: 5px;">
-                                                    <div class="progress-bar" id="progressBar" role="progressbar" style="width: 25%; background-color: #def152 " aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                                  </div></td>
+                                                <td>10</td>
+                                                <td>5</td>
                                                 <td>Active</td>
                                             </tr>
-                                            <tr>
-                                                <td> 
-                                                    <ul class="action"> 
-                                                        <li class="delete"><a href="#" data-bs-toggle="modal" data-bs-target="#DeleteConfirmationModal"><i class="icon-trash"></i></a></li>
-                                                    </ul>
-                                                </td>
-                                                <td><a href="#">Wasa </a></td>
-                                                
-                                                
-                                                <td><div class="progress" style="height: 5px;">
-                                                    <div class="progress-bar" id="progressBar" role="progressbar" style="width: 100%; background-color: #2fae09 " aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-                                                  </div></td>
-                                                <td>completed</td>
-                                            </tr>
+                                            
                                         </tbody>
                                     </table>
                                   </div>
