--- a/template/User/questionnare.html
+++ b/template/User/questionnare.html
@@ -64,7 +64,7 @@
                     <!--multisteps-form-->
                     <div class="multisteps-form">
                       <!--progress bar-->
-                      <a class="btn btn-blck" href="user-dashboard.html"><i class="feather feather-arrow-left arrow-left"></i>Back to home</a>
+                      <a class="btn btn-blck m-b-10" href="user-dashboard.html"><i class="feather feather-arrow-left arrow-left"></i>Back to home</a>
                       <!--form panels-->
                       <div class="row">
                         
