--- a/template/User/user-dashboard.html
+++ b/template/User/user-dashboard.html
@@ -124,7 +124,7 @@
                       </li>
                       <li class="sidebar-list">
                         <a class="sidebar-link sidebar-title active" href="questionnare.html">
-                          <i data-feather="help-circle"></i><span class="">questionnare</span>
+                          <i data-feather="help-circle"></i><span class="">questionnaire</span>
                         </a>
                       </li>
                       <li class="sidebar-list">
